# trl-token-reduction

./: .gitattributes  .gitignore  .mcp.exe.json.txt  .mcp.json  COMPOSER_EXTENSION_SPEC.md  CONTRIBUTING.md  IMPROVEMENTS.md  LICENSE  NOTICE  PUBLISH.md  README.md  RUN.md  SETUP.md  ci_binaries_check.txt  claude_probe.txt  claude_probe2.txt  claude_probe3.txt  claude_probe4.txt  claude_probe5.txt  config.yaml  diag_task_multi.py  installed_plugin_diag.txt  mcp_live_diag.txt  probe2_helper.py  probe4_helper.py  publish.ps1  pyproject.toml  requirements-plugin.txt  requirements.txt  run_benchmark.py  validate_an
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build-binaries.yml
bench/: __init__.py  accounting.py  cascade_bench.py  harness.py  pipeline_bench.py  providers.py  realistic_tasks.py  retrieval_bench.py  run_all.py  stats.py  subscription_auth.py  task.py  tasks.py  tau_bench_adapter.py  text_retrieval_bench.py
commands/: trl-index.md  trl-status.md
extension/: PRIVACY.md  README.md  STORE_LISTING.md  background.js  compress.js  content.css  content.js  manifest.json
packaging/: diag_live_launch.py  fake_mcp_stdio.py  frozen_server.py  test_mcp_exe.py  test_mcp_launch.py  trl-retrieve.spec  verify_logging.py
plugin/: INSTALL.md  __init__.py  cli.py  index_store.py  mcp_server.py
plugin/claude-code/: .mcp.json  SKILL.md
plugin/codex/: config.toml
proxy/: __init__.py  compress_endpoint.py  server.py  test_live.py  transform.py
skills/token-efficient-retrieval/: SKILL.md
tests/: test_ast_extract.py  test_bigcode_bench_offline.py  test_cache_stable_prefix.py  test_cascade.py  test_cascade_router.py  test_claude_cli_parse.py  test_compress_endpoint.py  test_compress_unit.py  test_engine_process.py  test_heavy_bench_offline.py  test_index_persistence.py  test_local_model.py  test_nl_rerank_eval.py  test_ollama_smoke.py  test_pdf.py  test_pipeline.py  test_plugin_package.py  test_providers_shape.py  test_proxy_server.py  test_proxy_transform.py  test_resolve_repo.py  test_retrieval.py  test_retrieve_unit.py  test_savings_log.py  test_text_retrieval.py  test_util.py
trl/: __init__.py  cache.py  cascade.py  compress.py  engine.py  local_model.py  message.py  util.py
trl/retrieval/: __init__.py  ast_index.py  embed.py  llm_rerank.py  pdf.py  retrieve.py  text_index.py
validate/: anthropic_probe.py  bigcode_bench.py  embed_compare.py  embed_rerank.py  heavy_bench.py  integrated_loop.py  integrated_real.py  live_anthropic.py  live_openai.py  llm_rerank_compare.py  measure_repo_reduction.py  nl_rerank_validate.py  rerank_threshold_sweep.py  savings_report.py
